# rag-api-service

./: .env.example  .gitignore  README.md  pyproject.toml
main/: helper.py  main.py
qdrant_data/collection/docs/: storage.sqlite
