[project]
name = "rag-api-service"
version = "0.1.0"
description = "Dependency scaffold for a LlamaIndex-based RAG API service."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "openai>=1.0.0",
  "llama-index-core>=0.12.0",
  "llama-index-readers-file>=0.4.0",
  "llama-index-vector-stores-qdrant>=0.4.0",
  "llama-index-embeddings-huggingface>=0.5.0",
  "llama-index-postprocessor-flag-embedding-reranker>=0.3.0",
  "qdrant-client>=1.12.0",
  "pymupdf>=1.26.0",
  "sentence-transformers>=3.3.0",
  "FlagEmbedding>=1.3.0",
]

[project.optional-dependencies]
openai = [
  "llama-index-llms-openai>=0.4.0",
]
local = [
  "llama-index-llms-ollama>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
